removed overflow x bug

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body {
   --border: 1px solid lightgrey;
 }
 .app {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 a {
